gccida/g2/ix86_decompose_address
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_decompose_address/src/i386.c:4934:4: error: expected ';' after expression
rtx v6; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_decompose_address/src/i386.c:4934:5: error: use of undeclared identifier 'v6'
rtx v6; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_decompose_address/src/i386.c:4941:4: error: expected ';' after expression
rtx v13; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_decompose_address/src/i386.c:4941:5: error: use of undeclared identifier 'v13'
rtx v13; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_decompose_address/src/i386.c:4945:4: error: expected ';' after expression
rtx v18; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_decompose_address/src/i386.c:4945:5: error: use of undeclared identifier 'v18'
rtx v18; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_decompose_address/src/i386.c:4947:4: error: expected ';' after expression
rtx v20; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_decompose_address/src/i386.c:4947:5: error: use of undeclared identifier 'v20'
rtx v20; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_decompose_address/src/i386.c:4959:4: error: expected ';' after expression
rtx v32; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_decompose_address/src/i386.c:4959:5: error: use of undeclared identifier 'v32'
rtx v32; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_decompose_address/src/i386.c:4960:4: error: expected ';' after expression
rtx v33; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_decompose_address/src/i386.c:4960:5: error: use of undeclared identifier 'v33'
rtx v33; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_decompose_address/src/i386.c:4961:4: error: expected ';' after expression
rtx v34; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_decompose_address/src/i386.c:4961:5: error: use of undeclared identifier 'v34'
rtx v34; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_decompose_address/src/i386.c:4963:4: error: expected ';' after expression
rtx v36; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_decompose_address/src/i386.c:4963:5: error: use of undeclared identifier 'v36'
rtx v36; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_decompose_address/src/i386.c:4964:4: error: expected ';' after expression
rtx v37; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_decompose_address/src/i386.c:4964:5: error: use of undeclared identifier 'v37'
rtx v37; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_decompose_address/src/i386.c:4965:4: error: expected ';' after expression
rtx v38; // rsi 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_decompose_address/src/obj/i386.o] Error 1
